make table look good on mobile for admin, fix mobile styling

--- a/src/App/ResourceTable/ResourceTable.styles.scss
+++ b/src/App/ResourceTable/ResourceTable.styles.scss
@@ -58,6 +58,7 @@
 
         &--header {
             color: #fff;
+            text-align: left;
         }
 
         &--name:before {
@@ -68,6 +69,9 @@
         }
         &--description:before {
             content: 'Description' 
+        }
+        &--difficulty:before {
+            content: 'Difficulty'
         }
 
         @media (max-width: 479px) {
